--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <div class="content-1">
+    <div class="body-container">
         <div class="header">
             <div class="logo">
                 Header Logo
@@ -18,60 +19,62 @@
                 <li>header link three</li>
             </ul>
         </div>
-    </div>
-    <div class="content-2">
-        <div class="left-items">
-            <h1>This website is awesome.</h1>
-            <p>This website has some subtext that goes here under the
-                main title. It's a smaller font and the color is lower contrast.
-            </p>
-            <button class="sign-up">Sign Up</button>
-        </div>
-        <img src="./img/logo.png" alt="placeholder logo image">
-    </div>
-    <div class="content-3">Some random information.
-        <div class="box">
-            <img src="./img/placeholder.png" alt="placeholder image">
-            <div class="text">This is some subtext under an illustration or image.</div>
-          </div>
-          <div class="box">
-            <img src="../img/placeholder.png" alt="placeholder image">
-            <div class="text">This is some subtext under an illustration or image.</div>
-          </div>
-          <div class="box">
-            <img src="./img/placeholder.png" alt="placeholder image">
-            <div class="text">This is some subtext under an illustration or image.</div>
-          </div>
-          <div class="box">
-            <img src="./img/placeholder.png" alt="placeholder image">
-            <div class="text">This is some subtext under an illustration or image.</div>
-          </div>
-    </div>
-    <div class="content-4">
-        <div class="quote">
-            Whatcha' smokin' on, ain't no need to be concerned, in a mobile world
-            with drugs I got a thousand I'ma burn Yeah I hate a whirlwind it'll
-            make yo tummy turn, I'm feelin su-ga high off that gummy worm
-        </div>
-        <div class="author">
-            -Boogie T, Gummy Worm by Subtronics
-        </div>
-    </div>
-    <div class="content-5">
-        <div class="continer">
-            <div class="text">
-                <div class="call">
-                    Call to action! It's time!
-                </div>
-                <div class="signup-text">
-                    Sign up for our product by clicking that button right over there!
-                </div>
+        <div class="content-1">
+            <div class="left-items">
+                <h1>This website is awesome.</h1>
+                <p>This website has some subtext that goes here under the
+                    main title. It's a smaller font and the color is lower contrast.
+                </p>
+                <button>Sign Up</button>
             </div>
-            <button class="alt-button sign-up">Sign Up</button>
+            <div class="image">
+                <img src="./img/logo.png" alt="placeholder logo image">
+            </div>
         </div>
-    </div>
-    <div class="footer">
-        Copyright The Odin Project 2021
+        <div class="content-2">Some random information.
+            <div class="box">
+                <img src="./img/placeholder.png" alt="placeholder image">
+                <div class="text">This is some subtext under an illustration or image.</div>
+            </div>
+            <div class="box">
+                <img src="../img/placeholder.png" alt="placeholder image">
+                <div class="text">This is some subtext under an illustration or image.</div>
+            </div>
+            <div class="box">
+                <img src="./img/placeholder.png" alt="placeholder image">
+                <div class="text">This is some subtext under an illustration or image.</div>
+            </div>
+            <div class="box">
+                <img src="./img/placeholder.png" alt="placeholder image">
+                <div class="text">This is some subtext under an illustration or image.</div>
+            </div>
+        </div>
+        <div class="content-3">
+            <div class="quote">
+                Whatcha' smokin' on, ain't no need to be concerned, in a mobile world
+                with drugs I got a thousand I'ma burn Yeah I hate a whirlwind it'll
+                make yo tummy turn, I'm feelin su-ga high off that gummy worm
+            </div>
+            <div class="author">
+                -Boogie T, Gummy Worm by Subtronics
+            </div>
+        </div>
+        <div class="content-4">
+            <div class="continer">
+                <div class="text">
+                    <div class="call">
+                        Call to action! It's time!
+                    </div>
+                    <div class="signup-text">
+                        Sign up for our product by clicking that button right over there!
+                    </div>
+                </div>
+                <button class="sign-up">Sign Up</button>
+            </div>
+        </div>
+        <div class="footer">
+            Copyright The Odin Project 2021
+        </div>
     </div>
 </body>
 </html>
