Complete intial project

--- a/index.html
+++ b/index.html
@@ -25,28 +25,31 @@
                 <p>This website has some subtext that goes here under the
                     main title. It's a smaller font and the color is lower contrast.
                 </p>
-                <button>Sign Up</button>
+                <button id="sign-up">Sign Up</button>
             </div>
             <div class="image">
                 <img src="./img/logo.png" alt="placeholder logo image">
             </div>
         </div>
-        <div class="content-2">Some random information.
-            <div class="box">
-                <img src="./img/placeholder.png" alt="placeholder image">
-                <div class="text">This is some subtext under an illustration or image.</div>
-            </div>
-            <div class="box">
-                <img src="../img/placeholder.png" alt="placeholder image">
-                <div class="text">This is some subtext under an illustration or image.</div>
-            </div>
-            <div class="box">
-                <img src="./img/placeholder.png" alt="placeholder image">
-                <div class="text">This is some subtext under an illustration or image.</div>
-            </div>
-            <div class="box">
-                <img src="./img/placeholder.png" alt="placeholder image">
-                <div class="text">This is some subtext under an illustration or image.</div>
+        <div class="content-2">
+            <div class="info">Some random information.</div>
+            <div class="boxes">
+                <div class="box">
+                    <img src="./img/placeholder.png" alt="placeholder image">
+                    <div class="text">This is some subtext under an illustration or image.</div>
+                </div>
+                <div class="box">
+                    <img src="../img/placeholder.png" alt="placeholder image">
+                    <div class="text">This is some subtext under an illustration or image.</div>
+                </div>
+                <div class="box">
+                    <img src="./img/placeholder.png" alt="placeholder image">
+                    <div class="text">This is some subtext under an illustration or image.</div>
+                </div>
+                <div class="box">
+                    <img src="./img/placeholder.png" alt="placeholder image">
+                    <div class="text">This is some subtext under an illustration or image.</div>
+                </div>
             </div>
         </div>
         <div class="content-3">
@@ -60,8 +63,8 @@
             </div>
         </div>
         <div class="content-4">
-            <div class="continer">
-                <div class="text">
+            <div class="container">
+                <div class="call-to-action">
                     <div class="call">
                         Call to action! It's time!
                     </div>
@@ -69,11 +72,11 @@
                         Sign up for our product by clicking that button right over there!
                     </div>
                 </div>
-                <button class="sign-up">Sign Up</button>
+                <button id="sign-up-inv">Sign Up</button>
             </div>
         </div>
         <div class="footer">
-            Copyright The Odin Project 2021
+            <div class="text">Copyright The Odin Project 2021</div>
         </div>
     </div>
 </body>
