--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script>
+        (function(){var a=window.mutiny=window.mutiny||{};if(!window.mutiny.client){a.client={_queue:{}};var b=["identify","trackConversion"];var c=[].concat(b,["defaultOptOut","optOut","optIn"]);var d=function factory(c){return function(){for(var d=arguments.length,e=new Array(d),f=0;f<d;f++){e[f]=arguments[f]}a.client._queue[c]=a.client._queue[c]||[];if(b.includes(c)){return new Promise(function(b,d){a.client._queue[c].push({args:e,resolve:b,reject:d});setTimeout(d,500)})}else{a.client._queue[c].push({args:e})}}};c.forEach(function(b){a.client[b]=d(b)})}})();
+        </script>
+        <script data-cfasync="false" src="https://client-registry.mutinycdn.com/personalize/client/1c358504bb2be74b.js"></script>
     <title>Landing Page</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
@@ -39,7 +43,7 @@
                     <div class="text">This is some subtext under an illustration or image.</div>
                 </div>
                 <div class="box">
-                    <img src="../img/placeholder.png" alt="placeholder image">
+                    <img src="./img/placeholder.png" alt="placeholder image">
                     <div class="text">This is some subtext under an illustration or image.</div>
                 </div>
                 <div class="box">
